--- a/EjerciciosMavenWeb/src/main/webapp/Ejercicio11.html
+++ b/EjerciciosMavenWeb/src/main/webapp/Ejercicio11.html
@@ -5,7 +5,7 @@
 <title>Ejercicio 1</title>
 </head>
 <body>
-	<form action="Ejercicio1" method="get">
+	<form action="SEjercicio11" method="get">
 		<input type="submit" name="saludo" value="Salúdame">
 	</form>
 	
