--- a/EjerciciosMavenWeb/src/main/webapp/Ejercicio14.html
+++ b/EjerciciosMavenWeb/src/main/webapp/Ejercicio14.html
@@ -8,8 +8,8 @@
 	<form action="SEjercicio14" method="post">
 		<fieldset>
 		<legend>Saludo</legend>
-		<label>Mensaje </label><input type="text"><br>
-		<label>Firma </label><input type="text"><br>
+		<label>Mensaje </label><input type="text" name="mensaje"><br>
+		<label>Firma </label><input type="text" name="firma"><br>
 		</fieldset>
 		<input type="submit" value="Enviar">
 		<input type="reset" value="Borrar">
