--- a/EjerciciosMavenWeb/src/main/webapp/Ejercicio12.html
+++ b/EjerciciosMavenWeb/src/main/webapp/Ejercicio12.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="Ejercicio12" method="get">
+	<form action="SEjercicio12" method="get">
 		<input type="text" name="saludo">
 		<input type="submit" value= "Enviar">
 	</form>
