Ejercicios comunicación servlets resueltos

--- a/EjerciciosComunicacionServlets/src/main/webapp/Ejercicio3.html
+++ b/EjerciciosComunicacionServlets/src/main/webapp/Ejercicio3.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Ejercicio 3</title>
 </head>
 <body>
-	<form action="">
+	<form action="SEjercicio3" method="post">
 		<label>Texto a escribir:</label><input type="text" name="texto"><br>
 		<input type="submit" value="Enviar">
 	</form>
